--- a/app/src/main/res/layout/rows.xml
+++ b/app/src/main/res/layout/rows.xml
@@ -2,17 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/ivProg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:contentDescription="@string/progimage"
+        android:src="@mipmap/ic_launcher" />
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="Hello World"
+        android:text="@string/hello_world"
         android:textStyle="bold"
         android:textSize="20sp"
         android:gravity="center"/>
