--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,10 @@
     android:orientation="vertical"
     tools:context="com.myapplicationdev.android.tw_listview.FirstActivity">
 
-    <TextView
+    <ListView
+        android:id="@+id/lvYear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="  DMSD Course Structure"
-        android:textSize="30sp" />
+        android:layout_height="match_parent"></ListView>
 
 
 </LinearLayout>
